#72 fixed routes issue and layout issue
- fixed route calls as admin
- changed layout font to override parent layout

--- a/client/src/app/pages/settings/account-settings/account-settings.component.scss
+++ b/client/src/app/pages/settings/account-settings/account-settings.component.scss
@@ -38,6 +38,10 @@
         }
      }
 }
+
+.account-settings-title{
+    color:black;
+}
 .account-settings-container-dark {
 
     .change-password-container,
